...
    <string name="app_name">MemeVZ</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_emailusername">Email/Username</string>
    <string name="textUsername">"Username"</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in!</string>
    <string name="action_register">Sign up!</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="slogan">Humor for humanity!</string>
    <string name="new_password">New password</string>
...
