<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/logo_top">
            <include layout="@layout/top_logo_layout"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/action"
            android:layout_below="@id/logo_top">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/main"
                android:layout_above="@id/nav_bar"
                android:background="@color/colorPrimary">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_above="@+id/upload_btn_area">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/upload_img_preview"
                        android:src="@drawable/placeholder"/>
                </RelativeLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:id="@+id/upload_btn_area"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="15dp">
                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="Choos Picture"
                        android:layout_weight="0.5"
                        android:background="@drawable/button_shape"
                        android:textColor="@color/white"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="4dp"
                        android:id="@+id/choose_img_btn"/>
                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="Upload"
                        android:layout_weight="0.5"
                        android:background="@drawable/button_shape"
                        android:textColor="@color/white"
                        android:layout_marginLeft="4dp"
                        android:layout_marginRight="5dp"
                        android:enabled="false"
                        android:id="@+id/upload_btn"/>
                </LinearLayout>

            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_alignParentBottom="true"
                android:background="@color/colorPrimary"
                android:id="@+id/nav_bar"
                >
                <include layout="@layout/activity_bottom_navigation"></include>
            </RelativeLayout>
        </RelativeLayout>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>