<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
...
        android:textColorHint="@color/white"
        android:transitionName="mail"
        app:errorEnabled="true"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            />
...
        app:layout_constraintTop_toBottomOf="@+id/username_layout"
        android:hint="@string/prompt_password"
        android:textColorHint="@color/white"
        app:boxBackgroundColor="@color/colorPrimaryDark"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/white"
        android:transitionName="password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toStartOf="parent"
        android:transitionName="change"
        app:layout_constraintTop_toBottomOf="@+id/password_layout" />

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_goneMarginTop="16dp"
        app:layout_goneMarginStart="24dp"
        app:layout_goneMarginEnd="24dp"
        android:layout_gravity="start"
...
