...
            android:background="@color/white"/>
        <ImageButton
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:src="@drawable/upload"
            android:background="@android:color/transparent"
            android:id="@+id/btn_nav_upload"
            android:layout_weight="0.33"
            android:layout_gravity="center"
            android:onClick="navUpload"/>
        <LinearLayout
            android:layout_width="1dp"
            android:layout_height="match_parent"
...
